--- a/components/j0ry9putc-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/j0ry9putc-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: j0ry9putc-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-41c8cde2ab.wa9c.p3.openshiftapps.com/rhtap/rhtap-qe:ae3d8dfaa3ddfa0f380ced9634a8e42bd39b00b8@sha256:f710ebf2dac401aced8a7b925acc04cdd5136a5f1f81c2ac23bfbc8e9b564603
+          name: container-image
